<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddFragment"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        android:id="@+id/liner_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edt_belgi_nomi"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image_add"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/imageback"
            android:layout_margin="10dp"/>
        <TextView
            android:background="#B6B1B1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/rasm_tanlash_uchun_ramka_ustiga_bosing"
            />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edt_belgi_nomi"
        android:background="#B6B1B1"
        android:padding="10dp"
        android:textSize="15sp"

        android:text="@string/qoida_nomini_kiriting"
        app:layout_constraintTop_toBottomOf="@id/liner_1"
        app:layout_constraintBottom_toTopOf="@id/edt_belgi_tarifi"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/edt_belgi_tarifi"
        android:background="#B6B1B1"
        android:padding="10dp"
        android:textSize="15sp"
        android:textColorHint="@color/black"
        android:hint="@string/to_liq_ma_lumotni_kiriting"
        app:layout_constraintTop_toBottomOf="@id/edt_belgi_nomi"
        app:layout_constraintBottom_toTopOf="@id/spinner_turi"
        android:layout_marginTop="20dp"
        />
    <Spinner
        android:id="@+id/spinner_turi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:entries="@array/belgi_turi_array"
        android:background="#B6B1B1"
        app:layout_constraintTop_toBottomOf="@id/edt_belgi_tarifi"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/saqlash1"
        app:layout_constraintTop_toBottomOf="@id/spinner_turi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>